--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>AntecessorSucessor</name>
+	<name>acc-java-02-exercises-excecao-maior-idade</name>
 	<comment></comment>
 	<projects>
 	</projects>
@@ -28,7 +28,7 @@
 	</natures>
 	<filteredResources>
 		<filter>
-			<id>1650547012880</id>
+			<id>1650547012901</id>
 			<name></name>
 			<type>30</type>
 			<matcher>
