--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ repositories {
 
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
+    implementation("org.apache.commons:commons-lang3:3.11")
+    // https://mvnrepository.com/artifact/com.google.guava/guava
+    implementation("com.google.guava:guava:28.0-jre")
 }
 
 test {
