--- a/build.gradle
+++ b/build.gradle
@@ -3,6 +3,7 @@ plugins {
     id 'eclipse'  // optional, for Eclipse project
     id 'idea'     // optional, for IntelliJ IDEA project
     id 'checkstyle'
+    id 'war'
 }
 configurations {
   checkstyleOverride
@@ -14,7 +15,6 @@ repositories {
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.5.2')
     implementation("org.apache.commons:commons-lang3:3.11")
-    // https://mvnrepository.com/artifact/com.google.guava/guava
     implementation("com.google.guava:guava:28.0-jre")
 }
 
@@ -37,5 +37,13 @@ checkstyle {
 
 checkstyleTest {
     enabled = true
-} 
+}
+
+war {
+    webAppDirectory = file('src/main/webapp')
+    from 'src/rootContent' // adds a file-set to the root of the archive
+    webInf { from 'src/additionalWebInf' } // adds a file-set to the WEB-INF dir.
+    classpath fileTree('additionalLibs') // adds a file-set to the WEB-INF/lib dir.
+    webXml = file('src/someWeb.xml') // copies a file to WEB-INF/web.xml
+}
 
