--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,13 @@
 			<version>5.4.0</version>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.commons/commons-lang3 -->
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.1</version>
+		</dependency>
+
 
 	</dependencies>
 	<build>
