--- a/09-ORM_hibernate/desafio_agregador/acc-java-02-exercises-gestao-time/.project
+++ b/09-ORM_hibernate/desafio_agregador/acc-java-02-exercises-gestao-time/.project
@@ -44,4 +44,15 @@
 			<location>/home/roni/eclipse-workspace/acc-java-0x-exercises-gestao-time/src/test/resources</location>
 		</link>
 	</linkedResources>
+	<filteredResources>
+		<filter>
+			<id>1653272984194</id>
+			<name></name>
+			<type>30</type>
+			<matcher>
+				<id>org.eclipse.core.resources.regexFilterMatcher</id>
+				<arguments>node_modules|.git|__CREATED_BY_JAVA_LANGUAGE_SERVER__</arguments>
+			</matcher>
+		</filter>
+	</filteredResources>
 </projectDescription>
