--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,8 +6,8 @@ spring:
   datasource:
     url: jdbc:h2:mem:testdb
     driverClassName: org.h2.Driver
-    username: sa
-    password:
+    username: speciality-app
+    password: speciality-app!
   jpa:
     database-platform: org.hibernate.dialect.H2Dialect
     hibernate:
