--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
-	<groupId>com.trybe.acc.java.camadas-projeto-spring</groupId>
-	<artifactId>camadas-projeto-spring</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.7.0</version>
+		<relativePath/> <!-- lookup parent from repository -->
+	</parent>
 
-	<name>camadas-projeto-spring</name>
+<!--	<groupId>com.trybe.acc.java.camadas-projeto-spring</groupId>-->
+<!--	<artifactId>camadas-projeto-spring</artifactId>-->
+<!--	<version>1.0-SNAPSHOT</version>-->
+	<groupId>com.trybe.aceleracao-java</groupId>
+	<artifactId>desafio-camadas-spring</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>desafio-camadas-spring</name>
+	<description>Simulando um CRUD de estudantes</description>
+
+<!--	<name>camadas-projeto-spring</name>-->
 	<url>https://www.betrybe.com</url>
 
 	<properties>
@@ -52,7 +64,6 @@
 	<build>
 
 		<plugins>
-
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
