--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,13 @@ quarkus.datasource.password=sa
 quarkus.datasource.db-kind=h2
 quarkus.hibernate-orm.database.default-schema=milhas
 
+
+#quarkus.datasource.jdbc.url=jdbc:mysql://localhost/milhas;INIT=RUNSCRIPT FROM 'classpath:scripts/cargainicial.sql'
+#quarkus.datasource.db-kind=mysql
+#quarkus.datasource.username=root
+#quarkus.datasource.password=toor
+#
+#quarkus.hibernate-orm.database.default-schema=milhas
+#quarkus.hibernate-orm.database.generation=drop-and-create
+
 app.adm.token=4dmt0k3n!
