feat: pessoa resource

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,12 +6,18 @@ quarkus.datasource.db-kind=h2
 quarkus.hibernate-orm.database.default-schema=milhas
 
 
-#quarkus.datasource.jdbc.url=jdbc:mysql://localhost/milhas;INIT=RUNSCRIPT FROM 'classpath:scripts/cargainicial.sql'
+#quarkus.datasource.jdbc.url=jdbc:mysql://localhost/milhas
 #quarkus.datasource.db-kind=mysql
 #quarkus.datasource.username=root
 #quarkus.datasource.password=toor
 #
 #quarkus.hibernate-orm.database.default-schema=milhas
 #quarkus.hibernate-orm.database.generation=drop-and-create
+#
+#quarkus.hibernate-orm.scripts.generation=drop-and-create
+#quarkus.hibernate-orm.scripts.generation.create-target=import.sql
+#quarkus.hibernate-orm.scripts.generation.drop-target=drop.sql
+
+
 
 app.adm.token=4dmt0k3n!
